# hc-scraper

./: .gitignore  README.md  pyproject.toml
hsc/: database.py  main.py
hsc/actions/: get_work_notices.py  scrape_manuscript.py  scrape_work.py  select_tags.py
hsc/models/: description.py  document.py
hsc/scrapers/: manuscript_description_page.py  tagged_works_page.py  tags_page.py  work_result_page.py  works_page.py
llm/: main.py
src/: database.py  main.py
src/actions/: __init__.py  get_work_notices.py  scrape_manuscript.py  scrape_work.py  select_tags.py
src/models/: codicological_unit.py  codicology.py  description.py  physdesc.py  witness.py  work.py
src/scrapers/: base.py  manuscript_description_page.py  tagged_works_page.py  witness.py  work_result_page.py  works.py  works_page.py
tests/: document_test.py  e2e.py  e2e_test.py  manuscript_description_a.html  manuscript_description_test.py  witness_test.py  work_a.html  work_metadata_test.py  work_page_test.py
tests/html/: manuscript_description_21835.html  manuscript_description_2995.html  manuscript_description_b.html  work_b.html  work_c.html  works.html
