[project]
name = "handschriftencensus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
    packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
