[project]
name = "handschriftencensus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "duckdb>=1.3.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
    packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
