[project]
name = "handschriftencensus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "casanova>=2.0.2",
    "click>=8.2.1",
    "duckdb>=1.3.0",
    "langchain-experimental>=0.3.4",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
llm = [
    "langchain-ollama>=0.3.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
]

[project.scripts]
hsc = "hsc.main:cli"

[tool.hatch.build.targets.wheel]
    packages = ["hsc", "llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
